--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@gsap/react": "^2.1.1",
     "@react-spring/web": "^9.7.5",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.11",
@@ -22,6 +23,7 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
