--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-spring/web": "^9.7.5",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.11",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
